# python-projects

./: RENT_NOTES.txt  germany_rent.tsv  lmmm.py  ordinal.py  pager.py  paginator.py  paginator_test.py  presidents.py  presidents.tsv  presidents_test.py  rents_usa.tsv  threadtest.py  us_rent.tsv  wp-reader.py  wpreader.py
curses-play/: centertext.py  clearer.py  curses_test.py  cursor.py  curstest.py  formattext.py  howto.py  padobjects.py  padtest.py  screensize.py  shellout.py  waitkey.py  windowobjects.py  wrapper.py
flashcards/: README.md  card_test.py  colonies.json  dinosaurs.json  flashcards.py  planets.json  pyproject.toml  screen_utils.py
flashcards/src/flashcards/: __main__.py  flashcards.py  screen_utils.py  test_flashcards.py
flashcards/tests/: card_test.py
